[gd_scene load_steps=5 format=2]

[ext_resource path="res://theme/UI.tres" type="Theme" id=1]
[ext_resource path="res://scripts/Multiplayer.gd" type="Script" id=2]
[ext_resource path="res://textures/arrows.png" type="Texture" id=3]

[sub_resource type="Environment" id=1]
background_mode = 4
glow_enabled = true
glow_intensity = 5.0
glow_strength = 0.96
glow_blend_mode = 0
glow_hdr_threshold = 0.71
glow_bicubic_upscale = true
glow_high_quality = true

[node name="Multiplayer" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -43.5
margin_right = 64.0
margin_bottom = 43.5
custom_constants/separation = 4

[node name="lan_multi" type="Label" parent="VBoxContainer2"]
margin_right = 128.0
margin_bottom = 19.0
text = "Local Network Multiplayer"
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer2"]
margin_top = 23.0
margin_right = 128.0
margin_bottom = 37.0

[node name="Host" type="Button" parent="VBoxContainer2/HBoxContainer"]
margin_right = 35.0
margin_bottom = 14.0
text = "Host"

[node name="Join" type="Button" parent="VBoxContainer2/HBoxContainer"]
margin_left = 39.0
margin_right = 74.0
margin_bottom = 14.0
text = "Join"

[node name="ip" type="Label" parent="VBoxContainer2"]
margin_top = 41.0
margin_right = 128.0
margin_bottom = 49.0
text = "Join IP"

[node name="Join_ip" type="LineEdit" parent="VBoxContainer2"]
unique_name_in_owner = true
margin_top = 53.0
margin_right = 128.0
margin_bottom = 62.0
size_flags_vertical = 3
text = "127.0.0.1"

[node name="Label" type="Label" parent="VBoxContainer2"]
margin_top = 66.0
margin_right = 128.0
margin_bottom = 74.0
text = "Join / Host Port"

[node name="join_host_port" type="SpinBox" parent="VBoxContainer2"]
unique_name_in_owner = true
margin_top = 78.0
margin_right = 128.0
margin_bottom = 87.0
custom_icons/updown = ExtResource( 3 )
max_value = 9999.0
value = 4242.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[connection signal="pressed" from="VBoxContainer2/HBoxContainer/Host" to="." method="_on_Host_pressed"]
[connection signal="pressed" from="VBoxContainer2/HBoxContainer/Join" to="." method="_on_Join_pressed"]
